Update fmt.Println output from 'Hello World'

--- a/mobile.html
+++ b/mobile.html
@@ -190,6 +190,7 @@
             <li class="item"><a href="https://chat.openai.com/">ChatGPT<span style="font-size: 0.8em; font-style: italic;"> by OpenAI</span></a></li> 
             <li class="item"><a href="https://copilot.microsoft.com/">... Microsoft Copilot</a></li>
             <li class="item"><a href="https://gemini.google.com/app">Gemini<span style="font-size: 0.8em; font-style: italic;"> by Google</span></a></li>
+            <li class="item"><a href="https://www.google.com/finance/beta/">... Google Finance</a></li> 
             <li class="item"><a href="https://claude.ai/chat/7e6cda4b-e744-4791-ac12-c2866c08235f">Claude<span style="font-size: 0.8em; font-style: italic;"> by Anthropic</span></a></li>
             <li class="item"><a href="https://www.meta.ai/">Llama<span style="font-size: 0.8em; font-style: italic;"> by Meta</span></a></li>
             <li class="item"><a href="https://chat.mistral.ai/">Mistral</a></li>
