--- a/Knowledge_Digest_Workflow.html
+++ b/Knowledge_Digest_Workflow.html
@@ -374,6 +374,7 @@
             <div class="action-item">提炼独特观点，及其论证</div>
             <div class="action-item">挑战核心假设</div>
             <div class="action-item">拆解关键要素和隐性逻辑</div>
+            <div class="action-item">模拟正反方辩论</div>
         </div>
 
         <!-- Card 3 -->
@@ -391,7 +392,7 @@
                 <div>搜索事件的某个指定重点</div>
                 <div class="subtext">
                     • 支持/反对/利益相关方的观点<br>
-                    • 专家意见 / 媒体观点<br>
+                    • 专家意见   • 媒体观点<br>
                     • 观点演变的时间线、影响因素<br>
                     • 历史沿革的脉络、关键点<br>
                     • 先例事件和相似之处
@@ -415,16 +416,18 @@
             <a href="https://www.perplexity.ai/spaces/strategic-foresight-yu-ce-tui-U0q7fodtQHeBmtKKymQ1HA#0" class="action-item" style="text-decoration: none; border-bottom: 1px solid #00f2ff79"; target="_blank">
                 <div>预测推演</div>
                 <div class="subtext">
-                    • 核心假设 / 驱动因素<br>
-                    • 趋势分析 / 宏观环境<br>
-                    • 直接影响 / 级联效应<br>
-                    • 预测轨迹 / 推演场景<br>
-                    • 战略路径
+                    • 全域扫描 / 背景构建<br>
+                    • 动力拆解 / 深度诊断<br>
+                    • 演化推演 / 情景构建<br>
+                    • 战略启示 / 监测体系<br>
                 </div>
             </a>
             <a href="https://www.perplexity.ai/spaces/probability-spectrum-forecaste-fUae_K30TEicebX9q_hP7g#0" class="action-item" style="text-decoration: none; border-bottom: 1px solid #00f2ff79"; target="_blank">事件结果的概率预测</a>
             <div class="action-item">探索进一步探讨的问题</div>
-            <div class="action-item">模拟正反方辩论</div>
+            <div class="action-item">潜在风险的预测和评估</div>
+            <div class="action-item">分析内部张力</div>
+            <div class="action-item">寻找阿喀琉斯之踵</div>
+
         </div>
 
         <!-- Card 5 -->
