--- a/Knowledge_Digest_Workflow.html
+++ b/Knowledge_Digest_Workflow.html
@@ -417,14 +417,15 @@
                 <div class="subtext">
                     • 全域扫描 / 背景构建<br>
                     • 动力拆解 / 深度诊断<br>
-                    • 演化推演 / 情景构建<br>
+                    • 影响剖析 / 情景构建<br>
                     • 战略启示 / 监测体系<br>
                 </div>
             </a>
             <a href="https://www.perplexity.ai/spaces/probability-spectrum-forecaste-fUae_K30TEicebX9q_hP7g#0" class="action-item" style="text-decoration: none; border-bottom: 1px solid #00f2ff79"; target="_blank">事件结果的概率预测</a>
             <div class="action-item">探索进一步探讨的问题</div>
             <div class="action-item">潜在风险的预测和评估</div>
-
+            <div class="action-item">战略路线规划和评估</div>
+            <div class="action-item">失败模式的归因预演</div>
 
         </div>
 
