--- a/Knowledge_Digest_Workflow.html
+++ b/Knowledge_Digest_Workflow.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>知识处理工作流</title>
+    <link rel="icon" href="icon-knowledge.ico" type="image/x-icon">
     <style>
         :root {
             --bg-color: #020205;
@@ -28,7 +29,7 @@
             align-items: center;
             min-height: 100vh;
             padding: 40px 20px;
-            zoom: 0.90;  
+            zoom: 0.92;  
         }
 
         /* Title Section */
@@ -74,7 +75,7 @@
 
         .tech-box h3 {
             margin-bottom: 5px;
-            font-size: 1rem;
+            font-size: 0.95rem;
             text-transform: uppercase;
             letter-spacing: 1px;
         }
@@ -101,7 +102,7 @@
             background-color: var(--card-bg);
             background-image: radial-gradient(rgb(from var(--primary-cyan) r g b / 10%) 1px, transparent 1px);
             background-size: 20px 20px;
-            padding: 25px 20px;
+            padding: 80px 20px 15px 20px;
             position: relative;
             display: flex;
             flex-direction: column;
@@ -118,35 +119,35 @@
 
         /* Card Header */
         .card-header {
-            text-align: center;
-            background-color: rgb(from var(--primary-cyan) r g b / 20%);
-            margin-bottom: 10px;
-            padding-bottom: 5px;
-            border: 1px solid rgb(from var(--text-dim) r g b / 15%);
-            position: relative;
-            flex-shrink: 0;
-        }
-        
-        .card-title {
-            font-size: 1.4rem;
-            font-weight: bold;
-            color: var(--text-white);
-            letter-spacing: 2px;
-            display: inline-block;
-            padding: 5px 25px;
-        }
-        /* 顶部挂载条 (全青色) */
-        .card::before {
-            content: '';
             position: absolute;
-            top: -2px;
-            left: 25%;
-            width: 50%;
-            height: 4px;
-            background: var(--primary-cyan);
-            box-shadow: 0 0 15px var(--primary-cyan);
-            transition: 0.3s;
+            top: -2px; /* 盖住上边框 */
+            left: 50%;
+            transform: translateX(-50%);
+            background-color: rgb(from var(--primary-cyan) r g b / 70%);
+            padding-top: 15px;
+            padding-bottom: 10px;
+            padding-right: 2px;
+            padding-left: 2px;
+            flex-shrink: 0;
+            font-weight: bold;
+            font-size: 1.2rem;
+            letter-spacing: 2px;
+
+
+            /* 倒梯形 */
+            clip-path: polygon(
+                0 0, 100% 0, 
+                90% 100%, 10% 100%
+            );
+            width: 60%;
+            text-align: center;
+
+            border: 1px solid var(--primary-cyan);
+            border-top: 2px solid  var(--primary-cyan);
+            border-radius: 5px;
+
         }
+               
 
         /* Tech Decoration Corners */
         .tech-deco {
@@ -230,10 +231,8 @@
 
         /* 悬停时角落发光 */
         .card:hover .deco-tl, .card:hover .deco-br {
-            width: 100%; height: 100%; opacity: 0.1;
+            width: 100%; height: 100%; opacity: 0.6;
         }
-
-
 
         /* Action Items */
         .action-item {
@@ -310,7 +309,7 @@
         }
 
         .output-icon span {
-            font-size: 0.8rem;
+            font-size: 0.95rem;
             font-weight: bold;
             text-transform: uppercase;
             letter-spacing: 1px;
@@ -329,7 +328,7 @@
         <div class="tech-box">
             <h3>剪藏至 Obsidian</h3>
             <div style="height: 1px; background: linear-gradient(90deg, transparent, var(--primary-cyan), transparent); width: 80%; margin: 5px auto; opacity: 0.6;"></div>
-            <p style="font-size: 0.85rem; letter-spacing: 1px;">[ 完善: 标签 / 链接 ]</p>
+            <div style="font-size:0.85rem;  letter-spacing:1px; margin:2px 0;">[ 完善: 标签 / 链接 ]</div>
         </div>
         <div style="position: absolute; left: 50%; bottom: -50px; width: 0.7px; height: 50px; background: linear-gradient(to bottom, var(--primary-cyan), transparent);"></div>
 
@@ -422,9 +421,9 @@
                 </div>
             </a>
             <a href="https://www.perplexity.ai/spaces/probability-spectrum-forecaste-fUae_K30TEicebX9q_hP7g#0" class="action-item" style="text-decoration: none; border-bottom: 1px solid #00f2ff79"; target="_blank">事件结果的概率预测</a>
-            <div class="action-item">探索进一步探讨的问题</div>
+            <div class="action-item">深入探讨的问题探索</div>
             <div class="action-item">潜在风险的预测和评估</div>
-            <div class="action-item">战略路线规划和评估</div>
+            <div class="action-item">战略路线的规划和评估</div>
             <div class="action-item">失败模式的归因预演</div>
 
         </div>
@@ -441,7 +440,7 @@
             </div>
             <a href="https://poe.com/Strategic-Warning" class="action-item" style="text-decoration: none; border-bottom: 1px solid #00f2ff79"; target="_blank">
                 <div>行业新闻战略预警速报</div>
-                <div style="font-size:0.8rem;  letter-spacing:1px; margin:2px 0;">[ 电信从业者视角 ]</div>
+                <div style="font-size:0.85rem;  letter-spacing:1px; margin:2px 0;">[ 电信从业者视角 ]</div>
                 <div class="subtext">
                     • 核心信号 / 预警评级<br>
                     • 初步影响研判<br>
@@ -451,7 +450,7 @@
             </a>
             <a href="https://poe.com/Analyst-Probe" class="action-item" style="text-decoration: none; border-bottom: 1px solid #00f2ff79"; target="_blank">
                 <div>投资分析师提出犀利质询</div>
-                <div style="font-size:0.8rem;  letter-spacing:1px; margin:2px 0;">[ 对抗性分析 ]</div>
+                <div style="font-size:0.85rem;  letter-spacing:1px; margin:2px 0;">[ 对抗性分析 ]</div>
                 <div class="subtext">
                     • 情景设定 / 叙事解构<br>
                     • 对抗性审视<br>
@@ -461,7 +460,7 @@
             </a>
             <a href="https://poe.com/Strategist-Probe" class="action-item" style="text-decoration: none; border-bottom: 1px solid #00f2ff79"; target="_blank">
                 <div>战略分析师提出质询</div>
-                <div style="font-size:0.8rem;  letter-spacing:1px; margin:2px 0;">[ 对抗性分析 ]</div>
+                <div style="font-size:0.85rem;  letter-spacing:1px; margin:2px 0;">[ 对抗性分析 ]</div>
             </a>
         </div>
 
@@ -492,13 +491,37 @@
                     <span>PPT</span>
                 </div>
                 <div class="output-icon">
-                    <svg viewBox="0 0 24 24"><path d="M14.6 16.6l4.6-4.6-4.6-4.6L16 6l6 6-6 6-1.4-1.4m-5.2 0L4.8 12l4.6-4.6L8 6l-6 6 6 6 1.4-1.4z"/></svg>
+                    <svg viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M9.4 16.6L4.8 12l4.6-4.6L8 6l-6 6 6 6 1.4-1.4zm5.2 0l4.6-4.6-4.6-4.6L16 6l6 6-6 6-1.4-1.4z"/>
+                    </svg>
                     <span>HTML</span>
+                </div>
+                <div class="output-icon">
+                    <svg viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6m4 18H6V4h7v5h5v11m-2-9H8v2h10v-2m0 4H8v2h10v-2m-6 4H8v2h4v-2z"/>
+                    </svg>
+                    <span>Report</span>
+                </div>
+                <div class="output-icon">
+                    <svg viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M22 21H2V3h2v16h2v-9h4v9h2v-12h4v12h2v-7h4v7z"/>
+                    </svg>
+                    <span>Infographic</span>
+                </div>
+                <div class="output-icon">
+                    <svg viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M15 21h2v-2h-2v2zm4-12h2V7h-2v2zM3 5v14c0 1.1.9 2 2 2h4v-2H5V5h4V3H5c-1.1 0-2 .9-2 2zm16-2v2h2c0-1.1-.9-2-2-2zm-8 20h2V1h-2v22zm8-6h2v-2h-2v2zM15 5h2V3h-2v2zm4 8h2v-2h-2v2zm0 8c1.1 0 2-.9 2-2h-2v2z"/>
+                    </svg>
+                    <span>Flash Card</span>
+                </div>
+                <div class="output-icon">
+                    <svg viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M20 2H4c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm0 18H4V4h16v16zm-9-3h2v-2h-2v2zm1-12c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"/>
+                    </svg>
+                    <span>Quiz</span>
                 </div>
             </div>
         </div>
-
     </div>
-
 </body>
 </html>
