--- a/index.html
+++ b/index.html
@@ -105,10 +105,6 @@
             min-height: 60px;
         }
 
-        .card:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 2px 8px var(--accent-color);
-        }
 
         .card-header {
             color: var(--accent-color);
@@ -238,8 +234,8 @@
         }
 
         #backToTop:hover {
-            background-color: var(--accent-color);
-            transform: translateY(-5px);
+            background-color: var(--text-main);
+            color: var(--accent-color);
         }
 
         footer {
@@ -327,7 +323,8 @@
                 <li><a href="https://chat.qwen.ai/">... Qwen</a></li>         
                 <li><a href="https://tingwu.aliyun.com/home">... 通义听悟</a></li>         
                 <li><a href="https://www.doubao.com/chat/">豆包 <span class="tag"> by 字节</span></a></li>
-                <li><a href="https://yiyan.baidu.com/">文心一言 <span class="tag"> by 百度</span></a></li>     
+                <li><a href="https://yiyan.baidu.com/">文心一言 <span class="tag"> by 百度</span></a></li>   
+                <li><a href="https://www.kimi.com/">Kimi <span class="tag"> by 月之暗面</span></a></li>
             </ul>
         </div>
 
@@ -345,6 +342,9 @@
                 <li><a href="https://iask.ai/">iAsk<br/></a></li>
                 <li><a href="https://komo.ai/">KOMO Search</a></li>
             </ul>
+
+            <li class="separator"></li>
+            
             <div class="bottom-actions">
                 <a href="https://demo.exa.ai/hallucination-detector" class="action-btn">Exa Hallucination Detector</a>
                 <a href="https://poe.com/Search_Planner" class="action-btn">Poe / Search Planner</a>
@@ -356,10 +356,10 @@
             <div class="card-header">Search <span class="sub-text">China</span></div>
             <ul>
                 <li><a href="https://felo.ai/search">Felo Search</a></li>   
-                <li><a href="https://metaso.cn/">秘塔 AI 搜索</a></li>
+                <li><a href="https://metaso.cn/">秘塔搜索</a></li>
                 <li><a href="https://n.cn/">纳米搜索<span class="tag">原360搜索</span></a></li>
-                <li><a href="https://search.tiangong.cn/">天工 AI 搜索</a></li>
-                <li><a href="https://bochaai.com/">博查AI搜索</a></li>
+                <li><a href="https://search.tiangong.cn/">天工搜索</a></li>
+                <li><a href="https://bochaai.com/">博查搜索</a></li>
                 <li><a href="https://bilin.ai/">Bilin Search</a></li>     
                 <li><a href="https://floatsearch.ai">Float Search</a></li>
             </ul>
@@ -560,7 +560,7 @@
     </div>
 
     <footer>
-        <p>© Natalie. All rights reserved.</p>
+        <p>© Natalie. ALL RIGHTS RESERVED.</p>
     </footer>
 
     <button onclick="topFunction()" id="backToTop" title="Go to top">⇑</button>
