--- a/Knowledge_Digest_Workflow.html
+++ b/Knowledge_Digest_Workflow.html
@@ -120,7 +120,7 @@
         /* Card Header */
         .card-header {
             position: absolute;
-            top: -2px; /* 盖住上边框 */
+            top: -5px; /* 盖住上边框 */
             left: 50%;
             transform: translateX(-50%);
             background-color: rgb(from var(--primary-cyan) r g b / 70%);
@@ -132,8 +132,8 @@
             font-weight: bold;
             font-size: 1.2rem;
             letter-spacing: 2px;
-            border-top: 2px solid  rgb(from var(--primary-cyan) r g b / 60%);
-            border-radius: 5px;
+            border-top: 5px rgb(from var(--primary-cyan) r g b / 70%);
+            border-radius: 10px;
 
             /* 倒梯形 */
             clip-path: polygon(
@@ -142,10 +142,8 @@
             );
             width: 60%;
             text-align: center;
-
         }
                
-
         /* Tech Decoration Corners */
         .tech-deco {
             position: absolute;
@@ -363,10 +361,9 @@
                 <div class="card-title">分析论证</div>
             </div>
             <div class="action-item">逻辑分析师</div>
-            <div class="action-item">魔法问题: 识别主张 / 论据 / 连接</div>
-
-            <div class="action-item">挑战核心假设</div>
             <div class="action-item">拆解关键要素和隐性逻辑</div>
+            <div class="action-item">魔法问题: 识别主张 / 论据 / 连接</div>
+            <div class="action-item">挑战核心假设</div>
             <div class="action-item">模拟正反方辩论</div>
             <div class="action-item">分析内部张力</div>
             <div class="action-item">寻找阿喀琉斯之踵</div>
@@ -417,12 +414,14 @@
                     • 战略启示 / 监测体系<br>
                 </div>
             </a>
+            <a href="https://www.perplexity.ai/spaces/zhan-lue-yi-tu-shen-du-tui-yan-VUvz2joDQQaGEk08.i31AQ#0" class="action-item" style="text-decoration: none; border-bottom: 1px solid var(--primary-cyan)"; >战略意图推演</a>
             <a href="https://www.perplexity.ai/spaces/probability-spectrum-forecaste-fUae_K30TEicebX9q_hP7g#0" class="action-item" style="text-decoration: none; border-bottom: 1px solid var(--primary-cyan)"; >事件结果的概率预测</a>
-            <div class="action-item">深入探讨的问题探索</div>
-            <div class="action-item">潜在风险的预测和评估</div>
             <div class="action-item">战略路线的规划和评估</div>
+            <div class="action-item">对行业生态的影响 / 输家与赢家矩阵</div>
+            <div class="action-item">探索进一步深入探讨的问题</div>
+            <div class="action-item">潜在风险的预测和评估</div>
             <div class="action-item">失败模式的归因预演</div>
-
+            <div class="action-item">反直觉逆向思考</div>
         </div>
 
         <!-- Card 5 -->
@@ -459,6 +458,9 @@
                 <div>战略分析师提出质询</div>
                 <div style="font-size:0.85rem;  letter-spacing:1px; margin:2px 0;">[ 对抗性分析 ]</div>
             </a>
+            <div class="action-item">竞争对手博弈模拟反击策略</div>
+            <div class="action-item">价值链重构预测</div>
+            <div class="action-item">失败模式的归因预演</div>
         </div>
 
         <!-- Card 6 (Output) -->
@@ -514,7 +516,7 @@
                 </div>
                 <div class="output-icon">
                     <svg viewBox="0 0 24 24" fill="currentColor">
-                        <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6m4 18H6V4h7v5h5v11m-2-9H8v2h10v-2m0 4H8v2h10v-2m-6 4H8v2h4v-2z"/>
+                        <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6m4 18H6V4h7v5h5v11m-2-9H8v2h10v-2m0 4H8v2h10v-2m-6"/>
                     </svg>
                     <span>Report</span>
                 </div>
