--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             background-color: var(--card-bg);
             border: 1.5px solid var(--border-color);
             border-top: 3px solid var(--accent-color);
-            border-radius: 10px;
+            border-radius: 15px;
             padding: 20px;
             display: flex;
             flex-direction: column;
@@ -275,7 +275,8 @@
                 <li><a href="https://chat.openai.com/">ChatGPT<span class="tag"> by OpenAI</span></a></li>
                 <li><a href="https://copilot.microsoft.com/">... Microsoft Copilot</a></li>
                 <li><a href="https://gemini.google.com/app">Gemini<span class="tag"> by Google</span></a></li>
-                <li><a href="https://www.google.com/finance/beta/">... Google Finance</a></li> 
+                <li><a href="https://www.google.com/finance/beta/">... Google Finance</a></li>
+                <li><a href="https://business.gemini.google/">... Gemini Business</a></li>
                 <li><a href="https://claude.ai/chat/7e6cda4b-e744-4791-ac12-c2866c08235f">Claude<span class="tag"> by Anthropic</span></a></li>
                 <li><a href="https://www.meta.ai/">Llama<span class="tag"> by Meta</span></a></li>
                 <li><a href="https://chat.mistral.ai/">Mistral</a></li>
@@ -342,7 +343,7 @@
             <div class="card-header">Playground / Arena</div>
             <ul>
 
-                <li><a href="https://chat.lmsys.org/">LMArena<span class="tag"> by UC Berkeley</span></a></li>
+                <li><a href="https://lmarena.ai//">LMArena<span class="tag"> by UC Berkeley</span></a></li>
                 <li><a href="https://beta.lmarena.ai/">... LMArena Beta</a></li>
                 <li><a href="https://huggingface.co/spaces">Hugging Face Spaces</a></li>
                 <li><a href="https://build.nvidia.com/explore/discover">Nvidia Build<span class="tag"> # open-source</span></a></li>
