Update print statement to say 'Goodbye World'

--- a/Knowledge_Digest_Workflow.html
+++ b/Knowledge_Digest_Workflow.html
@@ -345,7 +345,7 @@
             <a href="https://poe.com/Summary_asConsultant" class="action-item" style="text-decoration: none; border-bottom: 1px solid var(--primary-cyan);" >像咨询师一样总结</a>
             <div class="action-item">"结构等级方式"重写</div>
             <div class="action-item">生成 C-Suite Briefing Deck</div>
-            <div class="action-item">结构化一分钟简报</div>
+            <div class="action-item">语义压缩式总结</div>
             <div class="action-item">提炼核心洞察</div>
             <div class="action-item">提炼独特观点，及其论证</div>
         </div>
@@ -358,7 +358,7 @@
             <div class="tech-deco deco-br"></div>
 
             <div class="card-header">
-                <div class="card-title">分析论证</div>
+                <div class="card-title">分析审查</div>
             </div>
             <div class="action-item">逻辑分析师</div>
             <div class="action-item">拆解关键要素和隐性逻辑</div>
@@ -377,7 +377,7 @@
             <div class="tech-deco deco-br"></div>
 
             <div class="card-header">
-                <div class="card-title">搜索与核查</div>
+                <div class="card-title">搜索核查</div>
             </div>
             <a href="https://www.perplexity.ai/spaces/event-overview-shi-jian-gai-sh-SiZpS5SzQxGakWrIBpBkYQ#0" class="action-item" style="text-decoration: none; border-bottom: 1px solid var(--primary-cyan);" >事件概述</a>
             <a href="https://www.perplexity.ai/spaces/event-search-with-focus-ApEhUwwMT_C.W0orCXgkqQ" class="action-item" style="text-decoration: none; border-bottom: 1px solid var(--primary-cyan);" >
@@ -414,9 +414,17 @@
                     • 战略启示 / 监测体系<br>
                 </div>
             </a>
-            <a href="https://www.perplexity.ai/spaces/zhan-lue-yi-tu-shen-du-tui-yan-VUvz2joDQQaGEk08.i31AQ#0" class="action-item" style="text-decoration: none; border-bottom: 1px solid var(--primary-cyan)"; >战略意图推演</a>
+            <a href="https://www.perplexity.ai/spaces/zhan-lue-yi-tu-shen-du-tui-yan-VUvz2joDQQaGEk08.i31AQ#0" class="action-item" style="text-decoration: none; border-bottom: 1px solid var(--primary-cyan)"; >战略意图推演
+                <div class="subtext">
+                    • 话术脱水与事实还原<br>
+                    • 核心意图的多维度穿透<br>
+                    • 传导验证与格局推演<br>
+                </div>
+            </a>
             <a href="https://www.perplexity.ai/spaces/probability-spectrum-forecaste-fUae_K30TEicebX9q_hP7g#0" class="action-item" style="text-decoration: none; border-bottom: 1px solid var(--primary-cyan)"; >事件结果的概率预测</a>
-            <div class="action-item">战略路线的规划和评估</div>
+            <div class="action-item">战略路线的规划和评估
+
+            </div>
             <div class="action-item">对行业生态的影响 / 输家与赢家矩阵</div>
             <div class="action-item">探索进一步深入探讨的问题</div>
             <div class="action-item">潜在风险的预测和评估</div>
@@ -461,6 +469,7 @@
             <div class="action-item">竞争对手博弈模拟反击策略</div>
             <div class="action-item">价值链重构预测</div>
             <div class="action-item">失败模式的归因预演</div>
+            <div class="action-item">同类事件 / 业绩横向对比</div>
         </div>
 
         <!-- Card 6 (Output) -->
