--- a/index.html
+++ b/index.html
@@ -431,6 +431,7 @@
 
                 <li><a href="https://poe.com/Summary_toPPT_ZH">Poe /  Summary in PPT</a></li>   
                 <li><a href="https://chat.openai.com/g/g-ujcnMvq3H">GPTs / Summary in PPT</a></li>        
+                <li><a href="https://gemini.google.com/gem/17Kb6XVUmxwJmA0uanZ2BsGAmC0m2C98K?usp=sharing">Gemini Gem / Summary in PPT</a></li>      
 
                 <li class="separator"></li>
 
@@ -492,7 +493,7 @@
                 <li><a href="https://codewiki.google/">Code Wiki<span class="tag"> by Google</span></a></a></li>                         
                 <li><a href="https://deepwiki.com/">DeepWiki</a></li>                
                 <li><a href="https://devv.ai/zh">DEVV</a></li>
-                <li><a href="https://codeium.com/live/general">Codeium</a></li>            
+         
                 <li><a href="https://v0.dev/"> v0 <span class="tag"> by Vercel</span></a></li>
                 <li><a href="https://www.blackbox.ai/">Blackbox</a></li>
                 <li><a href="https://jit.codes/">Jit Codes</a></li>
@@ -508,7 +509,6 @@
                 <li><a href="https://www.futuretools.io/">Furure Tools</a></li>
                 <li><a href="https://opentools.ai/">Open Tools</a></li>
                 <li><a href="https://theresanaiforthat.com/">There's an AI for That</a></li>           
-                <li><a href="https://www.raghut.com/">Raghut</a></li>
 
                 <li class="separator"></li>
 
