--- a/Knowledge_Digest_Workflow.html
+++ b/Knowledge_Digest_Workflow.html
@@ -11,7 +11,7 @@
             --card-bg: rgba(10, 15, 30, 0.929);
             --primary-cyan: #3AA99F;
             --text-white: #fafaff;;
-            --text-dim: #B7B5AC;
+            --text-dim: #AABBCF;
         }
 
         * {
@@ -342,10 +342,10 @@
                 <div class="card-title">总结归纳</div>
             </div>
             <a href="https://poe.com/Summary_toPPT_ZH" class="action-item" style="text-decoration: none; border-bottom: 1px solid var(--primary-cyan);" >忠实原文总结</a>
+            <a href="https://poe.com/Condense-speech-note" class="action-item" style="text-decoration: none; border-bottom: 1px solid var(--primary-cyan);" >压缩方式总结</a>
             <a href="https://poe.com/Summary_asConsultant" class="action-item" style="text-decoration: none; border-bottom: 1px solid var(--primary-cyan);" >像咨询师一样总结</a>
-            <div class="action-item">"结构等级方式"重写</div>
             <div class="action-item">生成 C-Suite Briefing Deck</div>
-            <div class="action-item">语义压缩式总结</div>
+            <div class="action-item">信息简单化</div>
             <div class="action-item">提炼核心洞察</div>
             <div class="action-item">提炼独特观点，及其论证</div>
         </div>
