--- a/Knowledge_Digest_Workflow.html
+++ b/Knowledge_Digest_Workflow.html
@@ -342,7 +342,7 @@
                 <div class="card-title">总结归纳</div>
             </div>
             <a href="https://poe.com/Summary_toPPT_ZH" class="action-item" style="text-decoration: none; border-bottom: 1px solid var(--primary-cyan);" >忠实原文总结</a>
-            <a href="https://poe.com/Condense-speech-note" class="action-item" style="text-decoration: none; border-bottom: 1px solid var(--primary-cyan);" >压缩方式总结</a>
+            <a href="https://poe.com/Rewrite-ADHD" class="action-item" style="text-decoration: none; border-bottom: 1px solid var(--primary-cyan);" >为ADHD重写内容</a>
             <a href="https://poe.com/Summary_asConsultant" class="action-item" style="text-decoration: none; border-bottom: 1px solid var(--primary-cyan);" >像咨询师一样总结</a>
             <div class="action-item">生成 C-Suite Briefing Deck</div>
             <div class="action-item">信息简单化</div>
