--- a/Knowledge_Digest_Workflow.html
+++ b/Knowledge_Digest_Workflow.html
@@ -345,7 +345,7 @@
             <a href="https://poe.com/Rewrite-ADHD" class="action-item" style="text-decoration: none; border-bottom: 1px solid var(--primary-cyan);" >为ADHD重写内容</a>
             <a href="https://poe.com/Summary_asConsultant" class="action-item" style="text-decoration: none; border-bottom: 1px solid var(--primary-cyan);" >像咨询师一样总结</a>
             <div class="action-item">生成 C-Suite Briefing Deck</div>
-            <div class="action-item">信息简单化</div>
+            <a href="https://www.perplexity.ai/spaces/xin-xi-jian-dan-hua-pnUanZMbTWOEcSJOauukJQ#0" class="action-item" style="text-decoration: none; border-bottom: 1px solid var(--primary-cyan);" >信息简单化</a>
             <div class="action-item">提炼核心洞察</div>
             <div class="action-item">提炼独特观点，及其论证</div>
         </div>
